# namra

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CORE_TOOLS.md  Cargo.toml  GIT_WORKFLOW.md  LICENSE  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  REASONING_DISPLAY_GUIDE.md  ROADMAP.md  TOOL_CONFIG_GUIDE.md  WEEK2_COMPLETE.md  WEEK3_COMPLETE.md  WEEK4_COMPLETE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: GETTING_STARTED.md  ROADMAP.md
docs/development-logs/: WEEK2_COMPLETE.md  WEEK3_COMPLETE.md  WEEK4_COMPLETE.md
docs/diagrams/: DATA_STRUCTURES.md  SYSTEM_ARCHITECTURE.md
examples/: README.md  TOOL_TESTING_GUIDE.md
examples/agents/: file_manager_agent.yaml  poem_writer_agent.yaml  test_observability.yaml  test_phoenix.yaml
examples/tool-testing/: Cargo.toml
examples/tool-testing/src/: main.rs
homebrew-formula/: README.md  namra.rb
my-first-agent/: .env.example  README.md
my-first-agent/agents/: example_agent.yaml
namra-core/namra-api/: Cargo.toml
namra-core/namra-cli/: Cargo.toml
namra-core/namra-cli/src/: main.rs
namra-core/namra-cli/src/commands/: init.rs  mod.rs  run.rs  validate.rs
namra-core/namra-cli/src/commands/runs/: delete.rs  export.rs  list.rs  mod.rs  show.rs  stats.rs
namra-core/namra-config/: Cargo.toml
namra-core/namra-config/src/: agent.rs  lib.rs  parser.rs  validator.rs  workflow.rs
namra-core/namra-llm/: Cargo.toml
namra-core/namra-llm/src/: anthropic.rs  lib.rs
namra-core/namra-memory/: Cargo.toml
namra-core/namra-middleware/: Cargo.toml
namra-core/namra-middleware/src/: lib.rs
namra-core/namra-middleware/src/observability/: mod.rs  spans.rs  tracer.rs
namra-core/namra-plugin/: Cargo.toml
namra-core/namra-runtime/: Cargo.toml
namra-core/namra-runtime/src/: context.rs  error.rs  executor.rs  lib.rs  tool_factory.rs
namra-core/namra-runtime/src/strategy/: mod.rs  react.rs
namra-core/namra-storage/: Cargo.toml
namra-core/namra-storage/src/: error.rs  lib.rs  models.rs  sqlite.rs
namra-core/namra-storage/src/export/: csv_export.rs  excel.rs  json_export.rs  mod.rs
namra-core/namra-tools/: Cargo.toml
namra-core/namra-tools/src/: builtin.rs  error.rs  http.rs  lib.rs  tool.rs
namra-core/namra-tools/src/filesystem/: local.rs  mod.rs
nexus-core/nexus-api/: Cargo.toml
nexus-core/nexus-api/src/: lib.rs
nexus-core/nexus-cli/: Cargo.toml
nexus-core/nexus-cli/src/: main.rs
nexus-core/nexus-cli/src/commands/: init.rs  mod.rs  run.rs  validate.rs
nexus-core/nexus-config/: Cargo.toml
nexus-core/nexus-config/src/: agent.rs  lib.rs  parser.rs
nexus-core/nexus-llm/: Cargo.toml
nexus-core/nexus-llm/src/: adapter.rs  anthropic.rs  types.rs
nexus-core/nexus-memory/: Cargo.toml
nexus-core/nexus-memory/src/: lib.rs
nexus-core/nexus-middleware/: Cargo.toml
nexus-core/nexus-middleware/src/: lib.rs
nexus-core/nexus-plugin/: Cargo.toml
nexus-core/nexus-plugin/src/: lib.rs
nexus-core/nexus-runtime/: Cargo.toml
nexus-core/nexus-runtime/src/: context.rs  error.rs  executor.rs  lib.rs  tool_factory.rs
nexus-core/nexus-runtime/src/strategy/: mod.rs  react.rs
nexus-core/nexus-tools/: Cargo.toml
nexus-core/nexus-tools/src/: error.rs  filesystem.rs  lib.rs
nexus-core/nexus-tools/src/filesystem/: backend.rs  local.rs  remote.rs
test-agents/: weather_agent.yaml
