[package]
name = "namra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "namra"
path = "src/main.rs"

[dependencies]
namra-config = { path = "../namra-config" }
namra-llm = { path = "../namra-llm" }
namra-runtime = { path = "../namra-runtime" }
namra-tools = { path = "../namra-tools" }
namra-storage = { path = "../namra-storage" }

clap.workspace = true
tokio.workspace = true
futures = "0.3"
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
serde_json.workspace = true
chrono = { workspace = true }

[dev-dependencies]
