[package]
name = "namra-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
namra-middleware = { path = "../namra-middleware" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"

# HTTP client
reqwest.workspace = true
eventsource-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
url.workspace = true

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
