[package]
name = "namra-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
namra-config = { path = "../namra-config" }
namra-llm = { path = "../namra-llm" }
namra-tools = { path = "../namra-tools" }
namra-middleware = { path = "../namra-middleware" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
