[package]
name = "namra-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage and persistence for Namra agent runs"

[dependencies]
# Internal crates
namra-config = { path = "../namra-config" }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Export formats
csv = "1.3"
rust_xlsxwriter = "0.79"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
