[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-config = { path = "../nexus-config" }
nexus-llm = { path = "../nexus-llm" }

clap.workspace = true
tokio.workspace = true
futures = "0.3"
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
serde_json.workspace = true

[dev-dependencies]
