[package]
name = "nexus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
nexus-config = { path = "../nexus-config" }
nexus-llm = { path = "../nexus-llm" }
nexus-tools = { path = "../nexus-tools" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
